Revision history for perl distribution Mojo-Redis

3.18 Not Released
 - Add reconnect logic for Mojo::Redis::PubSub #37
 - Add CAVEATS
 - Updated documentation to use nicer variable names

3.17 2018-12-17T19:03:43+0900
 - Made connection-lost.t more robust
 - Add xread_structured() method
 - Add failing test for xread and Protocol::Redis::XS

3.16 2018-12-14T19:39:18+0900
 - Fix $db object from reconnecting #33

3.15 2018-12-13T08:24:10+0900
 - Fix connection-lost.t in other languages #30
 - Bumped Mojolicious version for Mojo::Promise support #32

3.14 2018-12-12T23:10:30+0900
 - Fix fork-safity for the blocking connection #28
 - Fix connection-lost.t in other languages #29

3.13 2018-12-11T14:44:45+0900
 - Fix rejecting promises when connection is lost #24
 - Fix connection.t when using a remote server #25
 - Fix cursor.t to use TEST_ONLINE #26 #27
   Contributor: Alexander Karelas

3.12 2018-12-07T12:04:19+0900
 - Add support for negative cache expire for serving stale data
 - Add destructor to Connection object to clean up connections
 - Add "close" event to Connection object

3.11 2018-08-17T00:01:33+0200
 - Fix invalid Makefile.PL

3.10 2018-08-16T23:41:10+0200
 - Add cluster commands #5
 - Add basic support for sentinel #13

3.09 2018-08-09T15:32:24+0200
 - Improved documentation for Cache

3.08 2018-08-02T15:37:32+0800
 - Add benchmark test #3
 - Fix cache() need to use Protocol::Redis because of binary data
 - Fix GEOPOS return value
 - Fix only decode response data if defined #19
 - Fix do not create new connection objects during global destruction
 - Improved return values in documentation

3.07 2018-07-12T09:59:05+0800
 - Add support for sending custom commands #18
 - Fix documentation issues
 - Will not enqueue connections if url() has changed

3.06 2018-07-11T11:00:01+0800
 - Fix processing exec() result
 - Improved example applications and add references from the POD

3.05 2018-07-11T10:24:59+0800